🐛 Topic, keyword 추출 정상화